--- a/clubsapp/templates/record_club_name.html
+++ b/clubsapp/templates/record_club_name.html
@@ -1,6 +1,6 @@
 {%extends "layout.html"%}
 {%block content%}
-<h1>Record Page</h1>
+<h1>Record Club Minutes</h1>
 <div class = "content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
