--- a/clubsapp/templates/view_minutes.html
+++ b/clubsapp/templates/view_minutes.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 {%block content%}
 <div class = "content-section">
-    <h1>View Page</h1>
+    <h1>View Minutes for {{ club }}</h1>
 </div>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for minutes by date">
 <br>
