--- a/clubsapp/templates/layout2.html
+++ b/clubsapp/templates/layout2.html
@@ -59,27 +59,11 @@
   </nav>  
 </header>
 <!-- container is the bootstrap highest level group of content -->
-<main role="main" class="container" style="margin-top: 100px"> 
+<main role="main" class="container" style="margin-top: 100px">
   <!-- a row groups things together in a row. -->
   <div class="row">
-    <div class="col-md-2">
-        {% block side_left %}{% endblock %}
-    </div>
-    <!-- a bootstrap row has 12 columns. This is saying everything within this col will take up 8 cols -->
-    <div class="col-md-8">
-      {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-          {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">
-              {{  message }}
-            </div>
-          {% endfor %}
-        {% endif %}
-      {% endwith %}
-      {% block content %} {% endblock %}
-    </div>
-    <div class="col-md-2">
-      {% block side_right %}{% endblock %}
+    <div class="col-md-8 offset-2">
+        {% block content %} {% endblock %}
     </div>
   </div>
 </main>
@@ -92,28 +76,26 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="/static/main.js"></script>
     <script>
-      function myFunction() {
-        // Declare variables
-        var input, filter, table, tr, td, i, txtValue;
-        input = document.getElementById("myInput");
-        filter = input.value.toUpperCase();
-        table = document.getElementById("myTable");
-        tr = table.getElementsByTagName("tr");
-      
-        // Loop through all table rows, and hide those who don't match the search query
-        for (i = 0; i < tr.length; i++) {
-          td = tr[i].getElementsByTagName("td")[1];
-          if (td) {
-            txtValue = td.textContent || td.innerText;
+        function myFunction() {
+          // Declare variables
+          var input, filter, ul, li, a, i, txtValue;
+          input = document.getElementById('myInput');
+          filter = input.value.toUpperCase();
+          ul = document.getElementById("myClubs");
+          li = ul.getElementsByTagName('li');
+        
+          // Loop through all list items, and hide those who don't match the search query
+          for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName("flip-card-front .h2")[0];
+            txtValue = a.textContent || a.innerText;
             if (txtValue.toUpperCase().indexOf(filter) > -1) {
-              tr[i].style.display = "";
+              li[i].style.display = "";
             } else {
-              tr[i].style.display = "none";
+              li[i].style.display = "none";
             }
           }
         }
-      }
-  </script>
+    </script>
   
 </body>
 </html>
