--- a/clubsapp/templates/user_clubs_edit.html
+++ b/clubsapp/templates/user_clubs_edit.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extend "layout.html" %}
 {% block content %}
 <h1><img src="{{ url_for('static', filename='favicon/clubslogo.png') }}" style="width:10%"></h1>
   <div class="content-section">
@@ -54,37 +54,4 @@
       </div>
     </form>
   </div>
-<br>
-
-<h3> Current Clubs </h3>
-<table class = "table table-bordered table-striped mb-0" style = "table-layout: fixed;">
-  <tr>
-    <th scope="col" colspan="2">Club</th>
-    <th scope="col" colspan="2">Members</th>
-    <th scope="col" colspan="6">Contacts</th>
-    <!-- <th scope="col" colspan="1">Edit</th> -->
-  </tr>
-
-  <div class="content-section">
-    {% for club in clubs %}
-    <tr>
-      <td scope="col" colspan="2">{{ club.name }}</td>
-      <td scope="col" colspan="2">{% for member in club.members%}
-            {{ member.firstname }} 
-            {{ member.lastname }}
-            <br>
-          {% endfor %}
-      </td>
-      <td scope="col" colspan="6">
-        <a href="{{ url_for('clubs.contact_list', club_id=club.id, user_id=current_user.id) }}"> Edit Contacts </a>
-        <br>
-        <p style="word-wrap: break-word;">{{club.contacts}}</p>
-      </td>
-      <!-- <td scope="col" colspan="1">
-        <a href="{{ url_for('clubs.user_clubs_edit', user_id=current_user.id, club_id=club.id)}}"><h3>Edit Club Info</h3></a>
-      </td> -->
-    </tr>
-    {% endfor %}
-  </div>
-</table>
-{% endblock content %}
+{% endblock %}
