--- a/clubsapp/templates/add_club_members.html
+++ b/clubsapp/templates/add_club_members.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
+{% block side_left %}
+{% endblock %}
 {% block content %}
 <h1>Club Members</h1>
 <div class="content-section">
