--- a/clubsapp/templates/layout2.html
+++ b/clubsapp/templates/layout2.html
@@ -43,7 +43,7 @@
         <!-- Navbar Right Side: CHANGE TO FORCE LOGIN LATER -->
         <div class="navbar-nav">
           {% if current_user.is_authenticated %}
-            <a class="nav-item nav-link" href="{{ url_for('clubs.school_clubs', user_id=current_user.id) }}"> School Clubs</a>
+            <a class="nav-item nav-link" href="{{ url_for('main.school_clubs', user_id=current_user.id) }}"> School Clubs</a>
             <a class="nav-item nav-link" href="{{ url_for('clubs.user_clubs', user_id=current_user.id) }}">My Clubs</a>
             <a class="nav-item nav-link" href="{{ url_for('clubs.num_club_members', user_id=current_user.id) }}">Club Members</a>
             <a class="nav-item nav-link" href="{{ url_for('clubs.generate_minutes', user_id=current_user.id) }}">Record Minutes</a>
