--- a/clubsapp/templates/user_clubs_edit.html
+++ b/clubsapp/templates/user_clubs_edit.html
@@ -1,4 +1,4 @@
-{% extend "layout.html" %}
+{% extends "layout.html" %}
 {% block content %}
 <h1><img src="{{ url_for('static', filename='favicon/clubslogo.png') }}" style="width:10%"></h1>
   <div class="content-section">
