--- a/clubsapp/templates/reset_request.html
+++ b/clubsapp/templates/reset_request.html
@@ -1,22 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Number of Club Members</h1>
+<h1>Reset Request</h1>
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Add Member</legend>
+            <legend class="border-bottom mb-4">Reset Password</legend>
             <div class="form-group">
-                {{ form.num_members.label(class="form-control-label") }}
-                {% if form.num_members.errors %}
-                    {{ form.num_members(class="form-control form-control-lg is-invalid") }}
+                {{ form.email.label(class="form-control-label") }}
+                {% if form.email.errors %}
+                    {{ form.email(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.num_members.errors %}
+                        {% for error in form.email.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.num_members(class="form-control form-control-lg") }}
+                    {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
         </fieldset>
@@ -25,5 +25,4 @@
         </div>
     </form>
 </div>
-
 {% endblock content %}
